--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -3,4 +3,5 @@ server:
 
 eureka:
   client:
-    defaultZone: serviceUrl:http://localhost:9200/eureka/
+    serviceUrl:
+      defaultZone: http://localhost:9200/eureka/
