--- a/user-service.yml
+++ b/user-service.yml
@@ -1,8 +1,12 @@
 server:
-  port: 9300
+  port: 9400
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:9200/eureka/
 
+spring:
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/user-market
