--- a/bill-service.yml
+++ b/bill-service.yml
@@ -16,6 +16,6 @@ spring:
       ddl-auto: create
       properties:
         hibernate:
-          dialect: org.hibernate.dialect.MySQLDialect
+          dialect: org.hibernate.dialect.MySQL5Dialect
           format_sql: true
     show-sql: true
