--- a/bill-service.yml
+++ b/bill-service.yml
@@ -8,7 +8,7 @@ eureka:
 
 spring:
   datasource:
-    url: jdbc:mysql:http://localhost:3306/billMDB
+    url: jdbc:mysql://localhost:3306/billMDB
     username: root
     password:
   jpa:
