--- a/bill-service.yml
+++ b/bill-service.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://locahost:9200/eureka/
+      defaultZone: http://localhost:9200/eureka/
 
 spring:
   datasource:
