add photos repo

--- a/client-service.yml
+++ b/client-service.yml
@@ -10,3 +10,7 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/client-db
+
+flickr:
+  apiKey: 4a6ad5c9a19e879f873828801f04c667
+  secretKey: 2e48b9175596daec
