--- a/user-service.yml
+++ b/user-service.yml
@@ -11,6 +11,19 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017/user-market
 
+  security:
+    oauth2:
+      resourceServer:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/market-realm
+          jwk-set-url: ${spring.security.oauth2.resourceServer.jwt.issuer-uri}/protocol/openid-connect/certs
+
+jwt:
+  auth:
+    converter:
+      resource-id: user-service
+      principal-attribute: preferred_name
+
   mail:
     host: smtp.gmail.com
     port: 587
